--- a/css/main-style.css
+++ b/css/main-style.css
@@ -8,6 +8,8 @@ body {
 /* Bonnet/banner styles (square, opacity, spacing) */
 .bonnet {
   width: calc(100vw - 32px);
+  position: relative;
+  z-index: 2;
   height: 160px;
   margin: 18px auto 0 auto;
   background: rgba(255, 182, 213, 0.10); /* soft pink, adjustable opacity */
@@ -21,7 +23,6 @@ body {
   padding: 30px 30px;
   display: flex;
   align-items: center;
-  z-index: 1;
   justify-content: center;
 }
 
