--- a/css/lotus-rain.css
+++ b/css/lotus-rain.css
@@ -17,7 +17,7 @@ html, body {
   width: 100vw;
   height: 100vh;
   pointer-events: none;
-  z-index: 0;
+  z-index: 0 !important;
   overflow: hidden;
 }
 
@@ -28,7 +28,7 @@ html, body {
   width: 32px;
   height: 32px;
   pointer-events: none;
-  z-index: 0;
+  z-index: 0 !important;
   opacity: 1;
   will-change: transform;
 }
