--- a/css/style.css
+++ b/css/style.css
@@ -182,3 +182,11 @@ input.incorrect {
     max-height: 68px;
   }
 }
+#auto-redirect-msg {
+  margin: 20px auto 0 auto;
+  font-size: 1.06rem;
+  color: #d4006f;
+  font-weight: 600;
+  max-width: 400px;
+  text-align: center;
+}
